--- a/DVLD Full Project/DVLD Full Project.csproj
+++ b/DVLD Full Project/DVLD Full Project.csproj
@@ -82,6 +82,12 @@
     <Compile Include="Applications\Manage Test Types\frmUpdateTestTypes.Designer.cs">
       <DependentUpon>frmUpdateTestTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Tests\Test Appointements\frmSechduleTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tests\Test Appointements\frmSechduleTest.Designer.cs">
+      <DependentUpon>frmSechduleTest.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tests\Test Appointements\frmTestAppointments.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -191,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Applications\Manage Test Types\frmUpdateTestTypes.resx">
       <DependentUpon>frmUpdateTestTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tests\Test Appointements\frmSechduleTest.resx">
+      <DependentUpon>frmSechduleTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tests\Test Appointements\frmTestAppointments.resx">
       <DependentUpon>frmTestAppointments.cs</DependentUpon>
