--- a/clsDataLayer/clsDataLayer.csproj
+++ b/clsDataLayer/clsDataLayer.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="clsApplicationsDataLayer.cs" />
     <Compile Include="clsApplicationsTypesDataLayer.cs" />
+    <Compile Include="clsDetainedLicensesDataLayer.cs" />
     <Compile Include="clsDriversDataLayer.cs" />
     <Compile Include="clsLicenseClassesDataLayer.cs" />
     <Compile Include="clsLicensesDataLayer.cs" />
