--- a/DVLD Full Project/DVLD Full Project.csproj
+++ b/DVLD Full Project/DVLD Full Project.csproj
@@ -142,6 +142,12 @@
     <Compile Include="ucDriverLicenseInfo.Designer.cs">
       <DependentUpon>ucDriverLicenseInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="ucInternationaApplicationInfos.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ucInternationaApplicationInfos.Designer.cs">
+      <DependentUpon>ucInternationaApplicationInfos.cs</DependentUpon>
+    </Compile>
     <Compile Include="ucSearchInternationalLicenseApplication.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucDriverLicenseInfo.resx">
       <DependentUpon>ucDriverLicenseInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucInternationaApplicationInfos.resx">
+      <DependentUpon>ucInternationaApplicationInfos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucSearchInternationalLicenseApplication.resx">
       <DependentUpon>ucSearchInternationalLicenseApplication.cs</DependentUpon>
