--- a/DVLD Full Project/DVLD Full Project.csproj
+++ b/DVLD Full Project/DVLD Full Project.csproj
@@ -100,17 +100,23 @@
     <Compile Include="Drivers\frmManageDrivers.Designer.cs">
       <DependentUpon>frmManageDrivers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Licenses\frmShowInternationalLicenseInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Licenses\frmShowInternationalLicenseInfo.Designer.cs">
+      <DependentUpon>frmShowInternationalLicenseInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Licenses\frmShowLicenseHistory.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Licenses\frmShowLicenseHistory.Designer.cs">
       <DependentUpon>frmShowLicenseHistory.cs</DependentUpon>
     </Compile>
-    <Compile Include="Licenses\frmShowLicenseInfo.cs">
+    <Compile Include="Licenses\frmShowLocalLicenseInfo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Licenses\frmShowLicenseInfo.Designer.cs">
-      <DependentUpon>frmShowLicenseInfo.cs</DependentUpon>
+    <Compile Include="Licenses\frmShowLocalLicenseInfo.Designer.cs">
+      <DependentUpon>frmShowLocalLicenseInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="Tests\Issue Driver Licnese\frmIssueDriverLicenseForTheFirstTime.cs">
       <SubType>Form</SubType>
@@ -136,17 +142,17 @@
     <Compile Include="Tests\Test Appointements\frmTestAppointments.Designer.cs">
       <DependentUpon>frmTestAppointments.cs</DependentUpon>
     </Compile>
-    <Compile Include="ucDriverLicenseInfo.cs">
+    <Compile Include="ucDriverInternationalLicenseInfos.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ucDriverLicenseInfo.Designer.cs">
-      <DependentUpon>ucDriverLicenseInfo.cs</DependentUpon>
+    <Compile Include="ucDriverInternationalLicenseInfos.Designer.cs">
+      <DependentUpon>ucDriverInternationalLicenseInfos.cs</DependentUpon>
     </Compile>
-    <Compile Include="ucInternationaApplicationInfos.cs">
+    <Compile Include="ucDriverLocalLicenseInfo.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ucInternationaApplicationInfos.Designer.cs">
-      <DependentUpon>ucInternationaApplicationInfos.cs</DependentUpon>
+    <Compile Include="ucDriverLocalLicenseInfo.Designer.cs">
+      <DependentUpon>ucDriverLocalLicenseInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="ucSearchInternationalLicenseApplication.cs">
       <SubType>UserControl</SubType>
@@ -267,11 +273,14 @@
     <EmbeddedResource Include="Drivers\frmManageDrivers.resx">
       <DependentUpon>frmManageDrivers.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Licenses\frmShowInternationalLicenseInfo.resx">
+      <DependentUpon>frmShowInternationalLicenseInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Licenses\frmShowLicenseHistory.resx">
       <DependentUpon>frmShowLicenseHistory.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Licenses\frmShowLicenseInfo.resx">
-      <DependentUpon>frmShowLicenseInfo.cs</DependentUpon>
+    <EmbeddedResource Include="Licenses\frmShowLocalLicenseInfo.resx">
+      <DependentUpon>frmShowLocalLicenseInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tests\Issue Driver Licnese\frmIssueDriverLicenseForTheFirstTime.resx">
       <DependentUpon>frmIssueDriverLicenseForTheFirstTime.cs</DependentUpon>
@@ -285,11 +294,11 @@
     <EmbeddedResource Include="Tests\Test Appointements\frmTestAppointments.resx">
       <DependentUpon>frmTestAppointments.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ucDriverLicenseInfo.resx">
-      <DependentUpon>ucDriverLicenseInfo.cs</DependentUpon>
+    <EmbeddedResource Include="ucDriverInternationalLicenseInfos.resx">
+      <DependentUpon>ucDriverInternationalLicenseInfos.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ucInternationaApplicationInfos.resx">
-      <DependentUpon>ucInternationaApplicationInfos.cs</DependentUpon>
+    <EmbeddedResource Include="ucDriverLocalLicenseInfo.resx">
+      <DependentUpon>ucDriverLocalLicenseInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucSearchInternationalLicenseApplication.resx">
       <DependentUpon>ucSearchInternationalLicenseApplication.cs</DependentUpon>
